Revision history for Perl module Prima

1.67 20XX-XX-XX
 - Add interactive links in Label
   -- generic link support is added, too

1.66 2022-08-20
 - Add HEIF image support
 - rop2(rop::NoOper) on fillPattern is now fully supported, but breaks the old code.
   Prepend rop2(rop::CopyPut) to fix.
 - fillPattern(Image/Icon) can be used for tile and stipple fills
 - rop::Blend replaces rop::SrcOver as a default ROP for OS surfaces.
   Breaks the old code.
 - Migrate to github actions
 - GTK3 (vs GTK2) is default
 - Support base64-encoded image files
 - Implement push/pop operations on the graphic context
 - ColorDialog looks better
 - Prima::IntUtils is deprecated

1.65 2022-04-21
 - Fix broken 1.64 distro
 - Fix libgif4 compilation

1.64 2022-04-09
 - Use libthai for Drawable.text_wrap
 - PS/PDF font metric calculations simplified and fixed
 - POD printing quality improved
 - Support Drawable.alpha in the PDF backend

1.63 2021-09-10
 - Fixes for macOS Catalina
 - Drawable changes:
   -- .alpha renamed to .bar_alpha
   -- .alpha and .antialias properties added
      (used GDI+/win32 and XRender/x11 for the implementation)
   -- .lineWidth changed to floating point
   -- the primitives accept floating point coordinates in
      the antialiasing mode
 - Path can produce subpixel quality polygons
 - Image respects .antialias by using Prima::Drawable::Antialias
 - Spinner uses .anitalias (smooth, but slower)
 - TabbedNotebook UI scaling looks better
 - FontMapper respects font styling now (before only regular fonts could be substituted)

1.62 2021-06-16
 - Add opendir/closedir/*dir for unicode operations
 - Add Prima::Drawable::Antialias for drawing aliased graphic primitives
 - Interactive selection change in Edit and PodView does not flicker now
 - Drawable::text_wrap can operate on text together with glyph objects,
      allowing for proper wrapping of shaped text
 - Added ist::OR and ist::AND image stretch types