@@ -3,6 +3,7 @@ Revision history for Perl module Prima
 1.67 20XX-XX-XX
  - Add interactive links in Label
    -- generic link support is added, too
+ - Pod-embedded base64-encoded images are supported in podview and tooltips
 
 1.66 2022-08-20
  - Add HEIF image support
